--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,7 +42,8 @@
     <!-- NDEBUG new permissions for targetting Android 14 -->
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
-    <uses-permission android:name="android.permission.USE_EXACT_ALARM" />
+    <!-- NDEBUG USE_EXACT_ALARM is the older 'dangerous' permission I'm using SCHEDULE_EXACT_ALARM instead. The only difference is it doesn't require the user to grant it, but they're phasing it out -->
+    <!--    <uses-permission android:name="android.permission.USE_EXACT_ALARM" />-->
 
     <application
         android:name=".MainApplication"
