--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
     <!-- uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" / -->
     <!-- PHONE PERMISSION GROUP -->
     <!-- uses-permission android:name="android.permission.READ_PHONE_STATE" / -->
+    <uses-permission android:name="android.permission.READ_BASIC_PHONE_STATE" />
+
 
 
     <!-- ################ NORMAL PERMISSIONS ########################## -->
